Apache Solr Multilingual 7.x-1.0-alpha1, 2012-xx-xx
---------------------------------------------------
[        ] mkalkbrenner: declared querypath dependency
[#1185196] pfrenssen, andymantell: Call to undefined function apachesolr_default_server()
[        ] mkalkbrenner: new schema generator based on querypath


Apache Solr Multilingual 7.x-1.0-alpha0, never released
-------------------------------------------------------
[        ] daspeter: intial port to d7
[        ] mkalkbrenner: adjusted schema.xml and solrconfig.xml according to apachesolr-7.x-1.0-beta3
[        ] mkalkbrenner: replaced multiple tag_XYZ fields by dynamic field tags_*
[#1048066] webflo, mkalkbrenner: Drupal 7 Upgrade. Port hook_block to new hooks.
[       ] mkalkbrenner: fixed a lot of warnings if some properties of document are not set
[       ] mkalkbrenner: changed description for data dir setting


Apache Solr Multilingual 6.x-2.0-alpha1, 2010-xx-xx
---------------------------------------------------
[#805336] mkalkbrenner: Hightlighting & body stored="false": no snippets
[#805414] ayalon, mkalkbrenner: Compatibility to apachesolr 2.x-dev
[#803016] ayalon, mkalkbrenner: Fatal error in combination with apachesolr 6.x-2.x-dev: function _apachesolr_nodeapi_update($translation_node);
[#805336] mkalkbrenner: Hightlighting & body stored="false": no snippets
[#793912] mkalkbrenner: Think about "Search fields" tab
[#783924] mkalkbrenner: think about ts_*
[       ] mkalkbrenenr, mhuder: added advanced language specific index options
[       ] mhuder: only validate spell length if any language has been selected
[       ] mhuder: updates on ts_ fields support
[       ] mkalkbrenner: If "language" neutral" is mapped to another language the document gets indexed using this language. "Language neutral" will not occure as an filter in the language facet anymore.
[       ] mkalkbrenner: Skip dataDir in solrconfig.xml for Multi Core Setup
[       ] mkalkbrenner: Allow user to adjust Auto Commit Max Time