@@ -272,8 +272,6 @@ function apachesolr_multilingual_apachesolr_field_name_map_alter(&$map) {
  */
 function apachesolr_multilingual_menu() {
 
-  $items = array();
-
   $items['admin/config/search/apachesolr/multilingual'] = array(
     'title' => 'Multilingual',
     'weight' => 0,
@@ -284,17 +282,25 @@ function apachesolr_multilingual_menu() {
     'type' => MENU_LOCAL_TASK,
   );
 
-  $items['admin/config/search/apachesolr/schema_generator'] = array(
-    'title' => 'Config files',
-    'weight' => 10,
-    'page callback' => 'drupal_get_form',
-    'page arguments' => array('apachesolr_multilingual_schema_generator_form'),
-    'file' => 'apachesolr_multilingual.schema_generator.inc',
-    'access arguments'   => array('administer search'),
-    'type' => MENU_LOCAL_TASK,
-  );
-
   return $items;
+}
+
+
+/**
+ * Implements hook_apachesolr_confgen_schema_alter().
+ */
+function apachesolr_multilingual_apachesolr_confgen_schema_alter($qp, $solr_version) {
+  module_load_include('inc', 'apachesolr_multilingual', 'apachesolr_multilingual.schema_generator');
+  apachesolr_multilingual_modify_schema($qp, $solr_version);
+}
+
+
+/**
+ * Implements hook_apachesolr_confgen_solrconfig_alter().
+ */
+function apachesolr_multilingual_apachesolr_confgen_solrconfig_alter($qp, $solr_version) {
+  module_load_include('inc', 'apachesolr_multilingual', 'apachesolr_multilingual.schema_generator');
+  apachesolr_multilingual_modify_solrconfig($qp, $solr_version);
 }
 
 /**
