@@ -9,100 +9,13 @@
  *
  * @author Markus Kalkbrenner (mkalkbrenner) | bio.logis GmbH
  *   @see http://drupal.org/user/124705
- *
- * @author Matthias Huder (mhuder) | Cocomore AG
- *   @see http://drupal.org/user/753332
-/
-
-
-/**
- * Implements hook_form().
- *
- * @param unknown_type $form_state
- * @return unknown_type
  */
-function apachesolr_multilingual_schema_generator_form($form_state) {
-  $form = array();
-  $active_languages = locale_language_list();
+
+
+function apachesolr_multilingual_modify_schema($qp_schema, $solr_version) {
   $selected_languages = variable_get('apachesolr_multilingual_languages', array());
-  $language_count = 0;
-  foreach ($selected_languages as $lang) {
-    if ($lang) {
-      $language_count++;
-    }
-  }
-  if ($language_count < 1) {
-    drupal_set_message(t('No language selected! You have to !link at least one language.', array('!link' => l(t('select'), 'admin/config/search/apachesolr/multilingual'))), 'error');
-  }
-  else {
-    $form['schema_file_select'] = array(
-      '#type' => 'checkboxes',
-      '#title' => t('Selected languages'),
-      '#options' => $active_languages,
-      '#disabled' => TRUE,
-      '#default_value' => $selected_languages,
-      '#description' => t(
-        'Current selected languages to be handled by multilingual search. You can add or remove languages !link.',
-        array('!link' => l(t('here'), 'admin/config/search/apachesolr/multilingual'))
-      ),
-    );
-
-    $form['set2'] = array(
-      '#type' => 'fieldset',
-      '#title' => t('Multilingual Configuration Download'),
-      '#weight' => 2,
-      '#collapsible' => FALSE,
-      '#collapsed' => FALSE,
-    );
-    $form['set2']['submit'] = array(
-      '#type' => 'submit',
-      '#name' => 'b2',
-      '#value' => t('Download !file for solr !version', array('!file' => 'schema.xml', '!version' => '1.4.x')),
-    );
-
-    $form['set2']['submitsc'] = array(
-      '#type' => 'submit',
-      '#name' => 'sc2',
-      '#value' => t('Download !file for solr !version', array('!file' => 'solrconfig.xml', '!version' => '1.4.x')),
-    );
-
-    $form['#submit'] = array('apachesolr_multilingual_schema_generator_form_submit');
-  }
-
-  return $form;
-}
-
-/**
- * Implements hook_form_validate()
- *
- * @param $form
- * @param $form_state
- *
- * @return void
- */
-function apachesolr_multilingual_schema_generator_form_validate(&$form, &$form_state) {
-  ob_clean();
-  ob_start();
-
-  $selected_languages = variable_get('apachesolr_multilingual_languages', array());
-
-  $solr_conf_path = drupal_get_path('module', 'apachesolr') . '/solr-conf/';
-  $schema_str_complete = file_get_contents($solr_conf_path . 'schema.xml');
-  $solrconfig_str_complete = file_get_contents($solr_conf_path . 'solrconfig.xml');
-  // re-enable dataDir settings to be controlled by apachesolr_multilingual
-  $solrconfig_str_complete = preg_replace("@<!--\s*(<dataDir>.*?</dataDir>)\s*-->@s", "$1", $solrconfig_str_complete);
-
-  $qp_schema = qp($schema_str_complete, NULL, array('use_parser' => 'xml'));
-  $qp_solrconfig = qp($solrconfig_str_complete, NULL, array('use_parser' => 'xml'));
-
-  if (variable_get('apachesolr_multilingual_multicore', 1)) {
-    $qp_solrconfig->find(':root dataDir')->detach();
-  }
-
-  $qp_solrconfig->find(':root maxTime')->text(variable_get('apachesolr_multilingual_autoCommit_maxTime', 120000));
-
   foreach ($selected_languages as $language) {
-    $qp_schema_language_specific = qp($schema_str_complete, NULL, array('use_parser' => 'xml'));
+    $qp_schema_language_specific = apachesolr_confgen_clone_qp($qp_schema);
     $stemmer = apachesolr_multilingual_get_stemmer($language);
     if ($stemmer) {
       $qp_schema_language_specific
@@ -137,29 +50,20 @@ function apachesolr_multilingual_schema_generator_form_validate(&$form, &$form_s
         ->insertAfter($qp_schema->find(':root')->xpath("fields/field[@name='$name']"));
     }
   }
-
-  ob_end_clean();
-
-  $form['schema_str_complete']['#type'] = 'value';
-  $form['schema_str_complete']['#value'] = $qp_schema->find(':root')->xml();
-
-  $form['solrconfig_str_complete']['#type'] = 'value';
-  $form['solrconfig_str_complete']['#value'] = $qp_solrconfig->find(':root')->xml();
-
-  if ($form_state['clicked_button']['#name'] === 'b1' || $form_state['clicked_button']['#name'] === 'b2') {
-    drupal_add_http_header('Content-Type', 'text/xml; charset=utf-8');
-    drupal_add_http_header('Content-Disposition', 'attachment; filename=schema.xml');
-    print $form['schema_str_complete']['#value'];
-    exit();
-  }
-
-  if ($form_state['clicked_button']['#name'] === 'sc1' || $form_state['clicked_button']['#name'] === 'sc2') {
-    drupal_add_http_header('Content-Type', 'text/xml; charset=utf-8');
-    drupal_add_http_header('Content-Disposition', 'attachment; filename=solrconfig.xml');
-    print $form['solrconfig_str_complete']['#value'];
-    exit();
-  }
 }
+
+
+function apachesolr_multilingual_modify_solrconfig($qp_solrconfig, $solr_version) {
+#  $solrconfig_str_complete = preg_replace("@<!--\s*(<dataDir>.*?</dataDir>)\s*-->@s", "$1", $solrconfig_str_complete);
+
+  if (variable_get('apachesolr_multilingual_multicore', 1)) {
+#    $qp_solrconfig->find(':root dataDir')->detach();
+  }
+
+  $qp_solrconfig->find(':root maxTime')->text(variable_get('apachesolr_multilingual_autoCommit_maxTime', 120000));
+}
+
+
 
 /**
  * Replaces placeholders by values
